--- a/README.textile
+++ b/README.textile
@@ -272,7 +272,7 @@ rake secret
 Edit your *config/initializers/secret_token.rb* file to add the secret token:
 
 <pre>
-Rails3DeviseRspecCucumber::Application.config.secret_token = '...some really long, random string...'
+FeeFinder::Application.config.secret_token = '...some really long, random string...'
 </pre>
 
 h2. Test the App
